feat: learning module with grammar analysis
