# services/api/internal/modules/learning/dtos/req/grammar-analyze.req.go
@@ -1,0 +1,5 @@
+package req
+
+type GrammarAnalyzeQuery struct {
+	ExplanationLanguage string `form:"explanationLanguage" json:"explanationLanguage"`
+}
