# services/api/internal/modules/learning/learning.module.go
@@ -2,10 +2,20 @@ package learning
 
 import (
 	openaiclient "github.com/gianghp123/SonaVoice/api/internal/clients/openai-client"
+	"github.com/gianghp123/SonaVoice/api/internal/modules/learning/controllers"
+	"github.com/gianghp123/SonaVoice/api/internal/modules/learning/repositories"
+	"github.com/gianghp123/SonaVoice/api/internal/modules/learning/services"
+	messagerepo "github.com/gianghp123/SonaVoice/api/internal/modules/message/repositories"
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 )
 
 func SetupModule(router *gin.RouterGroup, db *gorm.DB, openaiClient openaiclient.IOpenAIClient, authMiddlware gin.HandlerFunc) {
+	messageRepo := messagerepo.NewMessageRepository(db)
+	grammarRepo := repositories.NewGrammarAnalysisRepository(db)
+	grammarSvc := services.NewGrammarService(openaiClient, messageRepo, grammarRepo)
+	grammarCtrl := controllers.NewGrammarController(grammarSvc)
 
+	group := router.Group("/learning/grammar/messages/:messageId")
+	group.POST("", authMiddlware, grammarCtrl.HandleAnalyze)
 }
